2019-12-03  Antoine Quint  <graouts@apple.com>

        [Web Animations] Add a runtime flag for Web Animations composite operations
        https://bugs.webkit.org/show_bug.cgi?id=204718

        Reviewed by Dean Jackson.

        While we support parsing and output of composite modes via KeyframeEffect::getKeyframes(), we don't support them for blending properties.
        We now have a runtime flag for that feature so that we can continue working on it but not necessarily expose the feature by default.

        * animation/KeyframeEffect.cpp:
        (WebCore::processKeyframeLikeObject):
        (WebCore::processIterableKeyframes):
        (WebCore::processPropertyIndexedKeyframes):
        (WebCore::KeyframeEffect::getKeyframes):
        * animation/KeyframeEffect.idl:
        * page/RuntimeEnabledFeatures.h:
        (WebCore::RuntimeEnabledFeatures::setWebAnimationsCompositeOperationsEnabled):
        (WebCore::RuntimeEnabledFeatures::webAnimationsCompositeOperationsEnabled const):

2019-12-03  Joonghun Park  <jh718.park@samsung.com>

        Unreviewed. Remove build warning below since r252987.
        warning: unused variable ‘currentTrack’ [-Wunused-variable]

        No new tests, no behavioral changes.

        * Modules/mediastream/libwebrtc/LibWebRTCRtpSenderBackend.cpp:
        (WebCore::LibWebRTCRtpSenderBackend::replaceTrack):

2019-12-03  Zalan Bujtas  <zalan@apple.com>

        [LFC][IFC] Move trailing trimmable content logic to InlineItemRun
        https://bugs.webkit.org/show_bug.cgi?id=204798
        <rdar://problem/57593248>

        Reviewed by Antti Koivisto.

        Trailing letter spacing/fully trimmable whitespace logic should be internal to InlineItemRun.

        * layout/inlineformatting/InlineLineBuilder.cpp:
        (WebCore::Layout::LineBuilder::removeTrailingTrimmableContent):
        (WebCore::Layout::LineBuilder::appendTextContent):
        (WebCore::Layout::LineBuilder::runContentHeight const):