@@ -1,3 +1,14 @@
+2019-12-03  Tim Horton  <timothy_horton@apple.com>
+
+        Start adding encoding support for DisplayList and some DisplayListItems
+        https://bugs.webkit.org/show_bug.cgi?id=204740
+
+        * platform/graphics/GraphicsContext.cpp:
+        (WebCore::GraphicsContextStateChange::changesFromState const):
+        * platform/graphics/GraphicsContext.h:
+        Remove GraphicsContextState::NoChange, which is not needed with OptionSet
+        and in fact causes assertions to fire.
+
 2019-12-03  Antoine Quint  <graouts@apple.com>
 
         [Web Animations] Add a runtime flag for Web Animations composite operations
